--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "debugging-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sonnyftw.github.io/github-react-app/" 
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -11,6 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
